--- a/wally/local.properties
+++ b/wally/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 15 19:16:33 BRT 2020
-sdk.dir=C\:\\Users\\barau\\AppData\\Local\\Android\\Sdk
+#Wed Jun 17 23:41:05 BRT 2020
+sdk.dir=C\:\\Users\\thauan\\AppData\\Local\\Android\\Sdk
